force-app/main/default/objects/Segmentos__c/Segmentos__c.object-meta.xml
<CustomObject>
    <label>Segmento</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Nombre del Segmento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>