force-app/main/default/objects/Segmentos__c/fields/Alerta__c.field-meta.xml
<CustomField>
    <fullName>Alerta__c</fullName>
    <label>Alerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>