force-app/main/default/objects/Segmentos__c/fields/Creado_Automaticamente__c.field-meta.xml
<CustomField>
    <fullName>Creado_Automaticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando el segmento haya sido creado automáticamente al enviar el evento medico, estará seleccionado</description>
    <label>Creado Automáticamente</label>
    <type>Checkbox</type>
</CustomField>