force-app/main/default/objects/Segmentos__c/fields/Datetime_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Insert_Trigger__c</fullName>
    <label>Datetime Insert Trigger</label>
    <type>DateTime</type>
</CustomField>