force-app/main/default/objects/Segmentos__c/fields/Datetime_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Update_Trigger__c</fullName>
    <label>Datetime Update Trigger</label>
    <type>DateTime</type>
</CustomField>