force-app/main/default/objects/Segmentos__c/fields/Efector_solicitante__c.field-meta.xml
<CustomField>
    <fullName>Efector_solicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector solicitante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segmentos</relationshipLabel>
    <relationshipName>Segmentos</relationshipName>
    <type>Lookup</type>
</CustomField>