force-app/main/default/objects/Segmentos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>En auditoria</fullName>
                <label>En auditoría</label>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>