force-app/main/default/objects/Segmentos__c/fields/Evento_Medico__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Segmentos</relationshipLabel>
    <relationshipName>Segmentos</relationshipName>
    <type>Lookup</type>
</CustomField>