force-app/main/default/objects/Segmentos__c/fields/Fecha_Fin_real__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_real__c</fullName>
    <label>Fecha Fin real</label>
    <type>DateTime</type>
</CustomField>