force-app/main/default/objects/Segmentos__c/fields/Fecha_Fin_tentativa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_tentativa__c</fullName>
    <label>Fecha Fin tentativa</label>
    <type>DateTime</type>
</CustomField>