force-app/main/default/objects/Segmentos__c/fields/Fecha_Inicio_real__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_real__c</fullName>
    <label>Fecha Inicio real</label>
    <type>DateTime</type>
</CustomField>