force-app/main/default/objects/Segmentos__c/fields/Fecha_Inicio_tentativa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_tentativa__c</fullName>
    <label>Fecha Inicio tentativa</label>
    <type>DateTime</type>
</CustomField>