force-app/main/default/objects/Segmentos__c/fields/Numero_del_segmento__c.field-meta.xml
<CustomField>
    <fullName>Numero_del_segmento__c</fullName>
    <label>Número del segmento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>