force-app/main/default/objects/Segmentos__c/fields/Result_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Result_Update_Trigger__c</fullName>
    <label>Result Update Trigger</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>