force-app/main/default/objects/Segmentos__c/fields/Revirtiendo_Segmento__c.field-meta.xml
<CustomField>
    <fullName>Revirtiendo_Segmento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solo para evitar el triger al revertir un segmento</description>
    <label>Revirtiendo Segmento</label>
    <type>Checkbox</type>
</CustomField>