force-app/main/default/objects/Segmentos__c/fields/Segmento_actual__c.field-meta.xml
<CustomField>
    <fullName>Segmento_actual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segmento actual</label>
    <type>Checkbox</type>
</CustomField>