force-app/main/default/objects/Segmentos__c/fields/SegmentoID18__c.field-meta.xml
<CustomField>
    <fullName>SegmentoID18__c</fullName>
    <description>Campo para visualizar el ID de 18 Dígitos en los Reportes - JIRA DES- 1869</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SegmentoID18</label>
    <type>Text</type>
</CustomField>