force-app/main/default/objects/Segmentos__c/fields/Semid__c.field-meta.xml
<CustomField>
    <fullName>Semid__c</fullName>
    <externalId>true</externalId>
    <label>Sem_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>