force-app/main/default/objects/Segmentos__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <label>Solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>