force-app/main/default/objects/Segmentos__c/recordTypes/Segmento_EM.recordType-meta.xml
<RecordType>
    <fullName>Segmento_EM</fullName>
    <active>true</active>
    <label>Segmento EM</label>
</RecordType>