force-app/main/default/objects/Segmentos__c/validationRules/Modificacion_de_un_Segmento.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificacion_de_un_Segmento</fullName>
    <active>true</active>
    <description>Validacion para no modificar un segmento cuando el estado sea distinto a &quot;autorizado&quot;</description>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
				 $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
				OR(
				   ISPICKVAL(Evento_Medico__r.Estado__c , &quot;En Auditoria&quot;),
							ISPICKVAL(Evento_Medico__r.Estado__c , &quot;Suspendido&quot;),
							ISPICKVAL(Evento_Medico__r.Estado__c , &quot;Cerrado&quot;),
							ISPICKVAL(Evento_Medico__r.Estado__c , &quot;Anulado&quot;)
								)
				)</errorConditionFormula>
    <errorMessage>No puede modificar Segmentos si el Evento medico no ha sido &quot;Autorizado&quot;</errorMessage>
</ValidationRule>