force-app/main/default/objects/Segmentos__c/validationRules/Modificacion_fecha_Segmento_enviado_SS.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificacion_fecha_Segmento_enviado_SS</fullName>
    <active>true</active>
    <description>No puede modificar la &apos;fecha inicio tentativa&apos; ni &apos;fecha fin tentativa&apos; si el Segmento ya fue enviado a SS</description>
    <errorConditionFormula>AND(
	AND(
		$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,
		$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
		$User.Alias &lt;&gt; &quot;platint&quot;
	),
	NOT(ISBLANK(Semid__c)),
	OR(
		ISCHANGED(Fecha_Inicio_tentativa__c),
		ISCHANGED(Fecha_Fin_tentativa__c)
	)
)</errorConditionFormula>
    <errorMessage>No puede modificar la &apos;fecha inicio tentativa&apos; ni &apos;fecha fin tentativa&apos; si el Segmento ya fue enviado a SS</errorMessage>
</ValidationRule>