force-app/main/default/objects/Segmentos__c/validationRules/Validar_fechas.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_fechas</fullName>
    <active>false</active>
    <description>La Fecha Fin real debe ser posterior a la Fecha Inicio real</description>
    <errorConditionFormula>Fecha_Fin_real__c &lt;  Fecha_Inicio_real__c</errorConditionFormula>
    <errorMessage>La Fecha Fin real debe ser posterior a la Fecha Inicio real</errorMessage>
</ValidationRule>