force-app/main/default/objects/Segmentos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Semid__c</columns>
    <columns>Segmento_actual__c</columns>
    <columns>Evento_Medico__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>